--- a/T01_Widget/app/src/main/res/layout/login1.xml
+++ b/T01_Widget/app/src/main/res/layout/login1.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content" />
     <Button
         android:layout_centerInParent="true"
-        android:text="Login"
+        android:text="Login11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
