--- a/T05_thread/app/src/main/res/layout/activity_main.xml
+++ b/T05_thread/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vetical"
     tools:context="com.example.a.t05_thread.MainActivity">
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:progress="30"
+        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+
 
     <Button
         android:onClick="ButtonClick"
